--- a/game.conf
+++ b/game.conf
@@ -1,1 +1,4 @@
 name = Regnum
+release = 1338
+author = 1248
+description = Fight monsters, collect XP, craft battleaxes, armor, guns and lots more.
